--- a/app/src/App.css
+++ b/app/src/App.css
@@ -24,6 +24,14 @@
   color: white;
 }
 
+input {
+  font-size: calc(10px + 2vmin);
+}
+
+button {
+  font-size: calc(10px + 2vmin);
+}
+
 .App-link {
   color: #61dafb;
 }
